# g4y0f7h3d4y

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/: db.py  main.py  settings.py  utils.py
src/api/: __init__.py  handlers.py  middlewares.py  routes.py  schemas.py  security.py
