[tool.poetry]
name = "src"
version = "1.0.0"
description = "Helper for gayoftheday discord bot."
authors = ["Semen Syrovatskiy <mail@syrovatskiy.tk>"]

[tool.poetry.dependencies]
python = "^3.10"
dnspython = "2.2.1"
fastapi = "0.78.0"
motor = "3.0.0"
python-dotenv = "0.20.0"
uvicorn = "0.17.6"

[tool.poetry.dev-dependencies]
black = "22.3.0"
isort = "5.10.1"
mypy = "0.950"

[tool.poetry.scripts]
start = "src.main:start"

[tool.mypy]
python_version = "3.10"
exclude = [".venv"]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
py_version=310
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
